added content to the main page and styled it

--- a/index.html
+++ b/index.html
@@ -25,10 +25,80 @@
   </head>
   <body>
     <div class="hero">
-      <h2>👋 Hi! I am</h2>
+      <h3>👋 Hi! I am</h3>
       <h1>Oleksandra Kondieieva</h1>
       <p>Frontend developer, based in North America</p>
-      <div class="btn btn-branding mt-5">Get started</div>
+      <div>
+        <a href="#" class="btn btn-branding mt-5"> Get started</a>
+      </div>
+    </div>
+    <p class="sum-paragraph">
+      Featured Project which my best projects be choice to show
+    </p>
+    <div class="container">
+      <div class="row">
+        <div class="col d-none d-lg-block">
+          <img
+            src="/images/yoga.png"
+            alt="Yoga app"
+            class="img-fluid rounded-1"
+          />
+        </div>
+        <div class="col project-description">
+          <h2>Yogurt Project</h2>
+          <p>
+            Far far away, behind the word mountains, far from the countries
+            Vokalia and Consonantia, there live the blind texts. Separated they
+            live in Bookmarksgrove right at the coast of the Semantics, a large
+            language ocean. A small river named Duden flows by
+          </p>
+          <div>
+            <a href="#" class="btn project-button">View project</a>
+          </div>
+        </div>
+      </div>
+      <div class="row mt-2 d-lg-mt-5">
+        <div class="col project-description">
+          <h2>Weather App</h2>
+          <p>
+            Far far away, behind the word mountains, far from the countries
+            Vokalia and Consonantia, there live the blind texts. Separated they
+            live in Bookmarksgrove right at the coast of the Semantics, a large
+            language ocean. A small river named Duden flows by
+          </p>
+          <div>
+            <a href="#" class="btn project-button">View project</a>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img
+            src="/images/weather-app.png"
+            alt="Weather app"
+            class="img-fluid rounded-1"
+          />
+        </div>
+      </div>
+      <div class="row mt-2 d-lg-mt-5">
+        <div class="col d-none d-lg-block">
+          <img
+            src="/images/support-your-own.png"
+            alt="Charity organization page"
+            class="img-fluid rounded-1"
+          />
+        </div>
+        <div class="col project-description">
+          <h2>&ldquo;Support our own&rdquo; page</h2>
+          <p>
+            Far far away, behind the word mountains, far from the countries
+            Vokalia and Consonantia, there live the blind texts. Separated they
+            live in Bookmarksgrove right at the coast of the Semantics, a large
+            language ocean. A small river named Duden flows by
+          </p>
+          <div>
+            <a href="#" class="btn project-button">View project</a>
+          </div>
+        </div>
+      </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js
     "></script>
