Fixed the margin of project blocks for responsivness

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </div>
         </div>
       </div>
-      <div class="row mt-2 d-lg-mt-5">
+      <div class="row mt-5 project-block">
         <div class="col project-description">
           <h2>Weather App</h2>
           <p>
@@ -78,7 +78,7 @@
           />
         </div>
       </div>
-      <div class="row mt-2 d-lg-mt-5">
+      <div class="row mt-5 project-block">
         <div class="col d-none d-lg-block">
           <img
             src="/images/support-your-own.png"
