--- a/index.html
+++ b/index.html
@@ -100,6 +100,33 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="container work-inquiry">
+        <div class="row">
+          <div class="col-8 bottom-paragraph">
+            <h4>Work inquiry</h4>
+            <p>
+              Let&prime;s work together and i&prime;ll help you by all my best
+            </p>
+          </div>
+          <div class="col-4 inquiry-button-parent">
+            <a href="#" class="btn btn-branding work-inquiry-button">
+              Let's talk
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="email-parent">
+        <a href="mailto:olexandrakondeeva96@gmail.com" class="email">
+          olexandrakondeeva96@gmail.com
+        </a>
+      </div>
+      <div class="social-media-icons">
+        <a href="#"><i class="fa-brands fa-facebook-f facebook-icon"></i></a>
+        <a href="#"><i class="fa-brands fa-twitter twitter-icon"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram instagram-icon"></i></a>
+      </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js
     "></script>
   </body>
