--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script
       src="https://kit.fontawesome.com/861f510dfd.js"
       crossorigin="anonymous"
@@ -127,7 +128,5 @@
         <a href="#"><i class="fa-brands fa-instagram instagram-icon"></i></a>
       </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js
-    "></script>
   </body>
 </html>
