linked 'about' page to the 'get started' button

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
       <h1>Oleksandra Kondieieva</h1>
       <p>Frontend developer, based in North America</p>
       <div>
-        <a href="#" class="btn btn-branding mt-5"> Get started</a>
+        <a href="/about-page.html" class="btn btn-branding mt-5">
+          Get started</a
+        >
       </div>
     </div>
     <p class="sum-paragraph">
