added the 'work' page and fixed centering of the 'about' page

--- a/about-page.html
+++ b/about-page.html
@@ -25,33 +25,35 @@
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
-    <div class="container about-page-hero">
-      <div class="row">
-        <div class="col">
-          <div class="about-page-content">
-            <h1>Hi! I'm Oleksandra Kondieieva</h1>
-            <h2 class="mt-5">Frontend developer, based in North America</h2>
-            <p>
-              For anyone who wants to start learning code, this workshop is very
-              interesting. You will be challenged with different exercises, and
-              everything is well explained, homework and deadlines are good for
-              keep focus
-            </p>
-            <a href="#" class="btn btn-branding mt-4">View my projects</a>
+    <div class="container">
+      <div class="about-page-hero">
+        <div class="row">
+          <div class="col">
+            <div class="about-page-content">
+              <h1>Hi! I'm Oleksandra Kondieieva</h1>
+              <h2 class="mt-5">Frontend developer, based in North America</h2>
+              <p>
+                For anyone who wants to start learning code, this workshop is
+                very interesting. You will be challenged with different
+                exercises, and everything is well explained, homework and
+                deadlines are good for keep focus
+              </p>
+              <a href="#" class="btn btn-branding mt-4">View my projects</a>
+            </div>
           </div>
-        </div>
-        <div class="col-lg-6">
-          <div class="about-page-img">
-            <img
-              src="/images/about-photo.jpg"
-              alt=""
-              class="img-fluid rounded"
-            />
-            <a
-              href="https://www.pexels.com/photo/gray-koala-bear-hugging-tree-branch-2610309/"
-              class="img-author-link"
-              >Photo by Valeriia Miller:</a
-            >
+          <div class="col-lg-6">
+            <div class="about-page-img">
+              <img
+                src="/images/about-photo.jpg"
+                alt=""
+                class="img-fluid rounded"
+              />
+              <a
+                href="https://www.pexels.com/photo/gray-koala-bear-hugging-tree-branch-2610309/"
+                class="img-author-link"
+                >Photo by Valeriia Miller:</a
+              >
+            </div>
           </div>
         </div>
       </div>
