--- a/about-page.html
+++ b/about-page.html
@@ -26,10 +26,10 @@
   </head>
   <body>
     <div class="container">
-      <div class="about-page-hero">
+      <div class="content-container">
         <div class="row">
           <div class="col">
-            <div class="about-page-content">
+            <div class="content">
               <h1>Hi! I'm Oleksandra Kondieieva</h1>
               <h2 class="mt-5">Frontend developer, based in North America</h2>
               <p>
