--- a/work.html
+++ b/work.html
@@ -24,5 +24,70 @@
     />
     <link rel="stylesheet" href="/src/style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="content-container text-center">
+        <div class="content">
+          <h1>Take a look at what I've been working on!</h1>
+        </div>
+        <div class="row">
+          <div class="col-md-6 p-4">
+            <img src="/images/yoga.png" alt="" class="img-fluid rounded" />
+            <h3 class="mt-4">Yoga App</h3>
+            <p>HTML, CSS</p>
+          </div>
+          <div class="col-md-6 p-4">
+            <img
+              src="/images/weather-app.png"
+              alt=""
+              class="img-fluid rounded"
+            />
+            <h3 class="mt-4">Weather App</h3>
+            <p>HTML, CSS, JavaScript</p>
+          </div>
+          <div class="col-md-6 p-4">
+            <img
+              src="/images/support-your-own.png"
+              alt=""
+              class="img-fluid rounded"
+            />
+            <h3 class="mt-4">&ldquo;Support our own&rdquo; page</h3>
+            <p>HTML, CSS</p>
+          </div>
+          <div class="col-md-6 p-4">
+            <img src="/images/yoga.png" alt="" class="img-fluid rounded" />
+            <h3 class="mt-4">Yoga App</h3>
+            <p>HTML, CSS</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <div class="container work-inquiry">
+        <div class="row">
+          <div class="col-8 bottom-paragraph">
+            <h4>Work inquiry</h4>
+            <p>
+              Let&prime;s work together and i&prime;ll help you by all my best
+            </p>
+          </div>
+          <div class="col-4 inquiry-button-parent">
+            <a href="#" class="btn btn-branding work-inquiry-button">
+              Let's talk
+            </a>
+          </div>
+        </div>
+      </div>
+      <div class="email-parent">
+        <a href="mailto:olexandrakondeeva96@gmail.com" class="email">
+          olexandrakondeeva96@gmail.com
+        </a>
+      </div>
+      <div class="social-media-icons">
+        <a href="#"><i class="fa-brands fa-facebook-f facebook-icon"></i></a>
+        <a href="#"><i class="fa-brands fa-twitter twitter-icon"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram instagram-icon"></i></a>
+      </div>
+    </footer>
+  </body>
 </html>
