added the navbar

--- a/work.html
+++ b/work.html
@@ -25,6 +25,30 @@
     <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
+    <nav class="d-flex justify-content-between fixed-top">
+      <a href="/">
+        <img src="/images/logo.png" class="logo d-none d-md-block" alt="" />
+        <img
+          src="/images/small-logo.jpg"
+          class="logo d-block d-md-none"
+          alt=""
+        />
+      </a>
+      <ul class="nav-links">
+        <li>
+          <a href="/"> Home </a>
+        </li>
+        <li>
+          <a href="/about-page.html"> About </a>
+        </li>
+        <li class="active">
+          <a href="/work.html"> Work </a>
+        </li>
+        <li>
+          <a href="contact.html"> Contact </a>
+        </li>
+      </ul>
+    </nav>
     <div class="container">
       <div class="content-container text-center">
         <div class="content">
