added the navbar and linked the projects to buttons

--- a/about-page.html
+++ b/about-page.html
@@ -62,7 +62,9 @@
                 exercises, and everything is well explained, homework and
                 deadlines are good for keep focus
               </p>
-              <a href="#" class="btn btn-branding mt-4">View my projects</a>
+              <a href="/work.html" class="btn btn-branding mt-4"
+                >View my projects</a
+              >
             </div>
           </div>
           <div class="col-lg-6">
@@ -92,7 +94,10 @@
             </p>
           </div>
           <div class="col-4 inquiry-button-parent">
-            <a href="#" class="btn btn-branding work-inquiry-button">
+            <a
+              href="mailto:olexandrakondeeva96@gmail.com"
+              class="btn btn-branding work-inquiry-button"
+            >
               Let's talk
             </a>
           </div>
