--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,10 @@
             </p>
           </div>
           <div class="col-4 inquiry-button-parent">
-            <a href="#" class="btn btn-branding work-inquiry-button">
+            <a
+              href="mailto:olexandrakondeeva96@gmail.com"
+              class="btn btn-branding work-inquiry-button"
+            >
               Let's talk
             </a>
           </div>
