--- a/work.html
+++ b/work.html
@@ -56,30 +56,52 @@
         </div>
         <div class="row">
           <div class="col-md-6 p-4">
-            <img src="/images/yoga.png" alt="" class="img-fluid rounded" />
+            <a
+              href="https://sparkling-eclair-a768c2.netlify.app/"
+              target="_blank"
+            >
+              <img src="/images/yoga.png" alt="" class="img-fluid rounded" />
+            </a>
             <h3 class="mt-4">Yoga App</h3>
             <p>HTML, CSS</p>
           </div>
           <div class="col-md-6 p-4">
-            <img
-              src="/images/weather-app.png"
-              alt=""
-              class="img-fluid rounded"
-            />
+            <a
+              href="https://imaginative-jelly-0061e5.netlify.app/"
+              target="_blank"
+              href="https://imaginative-jelly-0061e5.netlify.app/"
+              target="_blank"
+            >
+              <img
+                src="/images/weather-app.png"
+                alt=""
+                class="img-fluid rounded"
+              />
+            </a>
             <h3 class="mt-4">Weather App</h3>
             <p>HTML, CSS, JavaScript</p>
           </div>
           <div class="col-md-6 p-4">
-            <img
-              src="/images/support-your-own.png"
-              alt=""
-              class="img-fluid rounded"
-            />
+            <a
+              href="https://www.shecodes.io/workshops/shecodes-basics-fcd4e9f1-e58c-456e-8a39-6274d93a7b8b/projects/1166004"
+              target="_blank"
+            >
+              <img
+                src="/images/support-your-own.png"
+                alt=""
+                class="img-fluid rounded"
+              />
+            </a>
             <h3 class="mt-4">&ldquo;Support our own&rdquo; page</h3>
             <p>HTML, CSS</p>
           </div>
           <div class="col-md-6 p-4">
-            <img src="/images/yoga.png" alt="" class="img-fluid rounded" />
+            <a
+              href="https://sparkling-eclair-a768c2.netlify.app/"
+              target="_blank"
+            >
+              <img src="/images/yoga.png" alt="" class="img-fluid rounded" />
+            </a>
             <h3 class="mt-4">Yoga App</h3>
             <p>HTML, CSS</p>
           </div>
@@ -96,7 +118,10 @@
             </p>
           </div>
           <div class="col-4 inquiry-button-parent">
-            <a href="#" class="btn btn-branding work-inquiry-button">
+            <a
+              href="mailto:olexandrakondeeva96@gmail.com"
+              class="btn btn-branding work-inquiry-button"
+            >
               Let's talk
             </a>
           </div>
