--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           />
         </div>
         <div class="col project-description">
-          <h2>Yogurt Project</h2>
+          <h2>Portfolio</h2>
           <p>
             Far far away, behind the word mountains, far from the countries
             Vokalia and Consonantia, there live the blind texts. Separated they
@@ -80,7 +80,12 @@
             language ocean. A small river named Duden flows by
           </p>
           <div>
-            <a href="#" class="btn project-button">View project</a>
+            <a
+              href="https://sparkling-eclair-a768c2.netlify.app/"
+              target="_blank"
+              class="btn project-button"
+              >View project</a
+            >
           </div>
         </div>
       </div>
@@ -94,7 +99,12 @@
             language ocean. A small river named Duden flows by
           </p>
           <div>
-            <a href="#" class="btn project-button">View project</a>
+            <a
+              href="https://imaginative-jelly-0061e5.netlify.app/"
+              target="_blank"
+              class="btn project-button"
+              >View project</a
+            >
           </div>
         </div>
         <div class="col d-none d-lg-block">
@@ -122,7 +132,12 @@
             language ocean. A small river named Duden flows by
           </p>
           <div>
-            <a href="#" class="btn project-button">View project</a>
+            <a
+              href="https://www.shecodes.io/workshops/shecodes-basics-fcd4e9f1-e58c-456e-8a39-6274d93a7b8b/projects/1166004"
+              target="_blank"
+              class="btn project-button"
+              >View project</a
+            >
           </div>
         </div>
       </div>
@@ -137,7 +152,10 @@
             </p>
           </div>
           <div class="col-4 inquiry-button-parent">
-            <a href="#" class="btn btn-branding work-inquiry-button">
+            <a
+              href="mailto:olexandrakondeeva96@gmail.com"
+              class="btn btn-branding work-inquiry-button"
+            >
               Let's talk
             </a>
           </div>
