Replaced "yoga app" with the "portfolio" name"

--- a/work.html
+++ b/work.html
@@ -62,7 +62,7 @@
             >
               <img src="/images/yoga.png" alt="" class="img-fluid rounded" />
             </a>
-            <h3 class="mt-4">Yoga App</h3>
+            <h3 class="mt-4">Portfolio</h3>
             <p>HTML, CSS</p>
           </div>
           <div class="col-md-6 p-4">
@@ -102,7 +102,7 @@
             >
               <img src="/images/yoga.png" alt="" class="img-fluid rounded" />
             </a>
-            <h3 class="mt-4">Yoga App</h3>
+            <h3 class="mt-4">Portfolio</h3>
             <p>HTML, CSS</p>
           </div>
         </div>
