added icons effects on hover and fixed the footer responsivness

--- a/about-page.html
+++ b/about-page.html
@@ -85,7 +85,7 @@
       </div>
     </div>
     <footer>
-      <div class="container work-inquiry">
+      <div class="container work-inquiry d-none d-md-block">
         <div class="row">
           <div class="col-8 bottom-paragraph">
             <h4>Work inquiry</h4>
