--- a/work.html
+++ b/work.html
@@ -109,7 +109,7 @@
       </div>
     </div>
     <footer>
-      <div class="container work-inquiry">
+      <div class="container work-inquiry d-none d-md-block">
         <div class="row">
           <div class="col-8 bottom-paragraph">
             <h4>Work inquiry</h4>
