--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta
+      name="description"
+      content="Oleksandra Kondieieva - frontend developer, based in North America"
+    />
+    <title>Front-end developer - Oleksandra Kondieieva</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,26 +30,30 @@
   </head>
   <body>
     <nav class="d-flex justify-content-between fixed-top">
-      <a href="/">
-        <img src="/images/logo.png" class="logo d-none d-md-block" alt="" />
+      <a href="/" title="Homepage">
+        <img
+          src="/images/logo.png"
+          class="logo d-none d-md-block"
+          alt="Oleksandra's logo"
+        />
         <img
           src="/images/small-logo.jpg"
           class="logo d-block d-md-none"
-          alt=""
+          alt="Oleksandra's logo"
         />
       </a>
       <ul class="nav-links">
         <li class="active">
-          <a href="/"> Home </a>
+          <a href="/" title="Homepage"> Home </a>
         </li>
         <li>
-          <a href="/about-page.html"> About </a>
+          <a href="/about-page.html" title="About Oleksandra"> About </a>
         </li>
         <li>
-          <a href="/work.html"> Work </a>
+          <a href="/work.html" title="Oleksandra's projects"> Work </a>
         </li>
         <li>
-          <a href="contact.html"> Contact </a>
+          <a href="contact.html" title="Contact Oleksandra"> Contact </a>
         </li>
       </ul>
     </nav>
@@ -54,7 +62,11 @@
       <h1>Oleksandra Kondieieva</h1>
       <p>Frontend developer, based in North America</p>
       <div>
-        <a href="/about-page.html" class="btn btn-branding mt-5">
+        <a
+          href="/about-page.html"
+          class="btn btn-branding mt-5"
+          title="About Oleksandra"
+        >
           Get started</a
         >
       </div>
@@ -84,6 +96,7 @@
               href="https://sparkling-eclair-a768c2.netlify.app/"
               target="_blank"
               class="btn project-button"
+              title="View Portfolio project"
               >View project</a
             >
           </div>
@@ -103,6 +116,7 @@
               href="https://imaginative-jelly-0061e5.netlify.app/"
               target="_blank"
               class="btn project-button"
+              title="View Weather App"
               >View project</a
             >
           </div>
@@ -136,6 +150,7 @@
               href="https://www.shecodes.io/workshops/shecodes-basics-fcd4e9f1-e58c-456e-8a39-6274d93a7b8b/projects/1166004"
               target="_blank"
               class="btn project-button"
+              title="View organization's page"
               >View project</a
             >
           </div>
@@ -155,6 +170,7 @@
             <a
               href="mailto:olexandrakondeeva96@gmail.com"
               class="btn btn-branding work-inquiry-button"
+              title="Contact Oleksandra"
             >
               Let's talk
             </a>
@@ -162,14 +178,33 @@
         </div>
       </div>
       <div class="email-parent">
-        <a href="mailto:olexandrakondeeva96@gmail.com" class="email">
+        <a
+          href="mailto:olexandrakondeeva96@gmail.com"
+          class="email"
+          title="Oleksandra'a email"
+        >
           olexandrakondeeva96@gmail.com
         </a>
       </div>
       <div class="social-media-icons">
-        <a href="#"><i class="fa-brands fa-facebook-f facebook-icon"></i></a>
-        <a href="#"><i class="fa-brands fa-twitter twitter-icon"></i></a>
-        <a href="#"><i class="fa-brands fa-instagram instagram-icon"></i></a>
+        <a
+          href="https://m.facebook.com/100017594467832/"
+          title="Facebook profile"
+          ><i class="fa-brands fa-facebook-f facebook-icon"></i
+        ></a>
+        <a href="https://github.com/Flydeer19" title="Github profile"
+          ><i class="fa-brands fa-github github-icon"></i
+        ></a>
+      </div>
+      <div class="author">
+        <p>
+          This project is coded by Oleksandra Kondieieva and is
+          <a
+            href="https://github.com/Flydeer19/portfolio-homework"
+            title="Github link to the code"
+            >open-sourced</a
+          >
+        </p>
       </div>
     </footer>
   </body>
