--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
       <div class="row">
         <div class="col d-none d-lg-block">
           <img
-            src="/images/yoga.png"
-            alt="Yoga app"
+            src="/images/guess-the-number.png"
+            alt="Guess the number"
             class="img-fluid rounded-1"
           />
         </div>
         <div class="col project-description">
-          <h2>Portfolio</h2>
+          <h2>Guess the number</h2>
           <p>
             Far far away, behind the word mountains, far from the countries
             Vokalia and Consonantia, there live the blind texts. Separated they
@@ -93,10 +93,10 @@
           </p>
           <div>
             <a
-              href="https://sparkling-eclair-a768c2.netlify.app/"
+              href="https://grand-haupia-e65aed.netlify.app/"
               target="_blank"
               class="btn project-button"
-              title="View Portfolio project"
+              title="View 'Guess the number' project"
               >View project</a
             >
           </div>
