--- a/work.html
+++ b/work.html
@@ -65,18 +65,18 @@
         <div class="row">
           <div class="col-md-6 p-4">
             <a
-              href="https://sparkling-eclair-a768c2.netlify.app/"
+              href="https://grand-haupia-e65aed.netlify.app/"
               target="_blank"
-              title="View Portfolio project"
+              title="View 'Guess the number' project"
             >
               <img
-                src="/images/yoga.png"
-                alt="Yoga app"
+                src="/images/guess-the-number.png"
+                alt="Guess the number"
                 class="img-fluid rounded"
               />
             </a>
-            <h3 class="mt-4">Portfolio</h3>
-            <p>HTML, CSS</p>
+            <h3 class="mt-4">Guess the number</h3>
+            <p>HTML, CSS, JavaScript</p>
           </div>
           <div class="col-md-6 p-4">
             <a
