added the 'dice game' to the work page

--- a/work.html
+++ b/work.html
@@ -110,13 +110,13 @@
           </div>
           <div class="col-md-6 p-4">
             <a
-              href="https://sparkling-eclair-a768c2.netlify.app/"
+              href="https://zesty-palmier-463b11.netlify.app/"
               target="_blank"
-              title="View portfolio page"
+              title="View the dice game"
             >
               <img
-                src="/images/yoga.png"
-                alt="Yoga App"
+                src="/images/dice-game.png"
+                alt="Dice Game"
                 class="img-fluid rounded"
               />
             </a>
