replaced the project name

--- a/work.html
+++ b/work.html
@@ -120,7 +120,7 @@
                 class="img-fluid rounded"
               />
             </a>
-            <h3 class="mt-4">Portfolio</h3>
+            <h3 class="mt-4">Dice Game</h3>
             <p>HTML, CSS</p>
           </div>
         </div>
