added favicons, replaced with my own logo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       content="Oleksandra Kondieieva - frontend developer, based in North America"
     />
     <title>Front-end developer - Oleksandra Kondieieva</title>
+    <link rel="icon" href="/images/bee.svg" type="image/x-icon" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -32,13 +33,13 @@
     <nav class="d-flex justify-content-between fixed-top">
       <a href="/" title="Homepage">
         <img
-          src="/images/logo.png"
+          src="/images/my-logo-1500-cropped.svg"
           class="logo d-none d-md-block"
           alt="Oleksandra's logo"
         />
         <img
-          src="/images/small-logo.jpg"
-          class="logo d-block d-md-none"
+          src="/images/bee-small-logo.svg"
+          class="small-logo d-block d-md-none"
           alt="Oleksandra's logo"
         />
       </a>
@@ -75,14 +76,34 @@
       Featured Project which my best projects be choice to show
     </p>
     <div class="container">
-      <div class="row">
-        <div class="col d-none d-lg-block">
+      <div class="row mt-5 project-block">
+        <div class="col d-none d-lg-block d-flex align-self-center">
           <img
-            src="/images/guess-the-number.png"
-            alt="Guess the number"
+            src="/images/dice-image.png"
+            alt="Charity organization page"
             class="img-fluid rounded-1"
           />
         </div>
+        <div class="col project-description">
+          <h2>Dice Game</h2>
+          <p>
+            Far far away, behind the word mountains, far from the countries
+            Vokalia and Consonantia, there live the blind texts. Separated they
+            live in Bookmarksgrove right at the coast of the Semantics, a large
+            language ocean. A small river named Duden flows by
+          </p>
+          <div>
+            <a
+              href="https://zesty-palmier-463b11.netlify.app/"
+              target="_blank"
+              class="btn project-button"
+              title="View the Dice Game"
+              >View project</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="row mt-5">
         <div class="col project-description">
           <h2>Guess the number</h2>
           <p>
@@ -101,8 +122,22 @@
             >
           </div>
         </div>
+        <div class="col d-none d-lg-block d-flex align-self-center">
+          <img
+            src="/images/guess-number-image.png"
+            alt="Guess the number"
+            class="img-fluid rounded-1"
+          />
+        </div>
       </div>
       <div class="row mt-5 project-block">
+        <div class="col d-none d-lg-block d-flex align-self-center">
+          <img
+            src="/images/weather-img.png"
+            alt="Weather app"
+            class="img-fluid rounded-1"
+          />
+        </div>
         <div class="col project-description">
           <h2>Weather App</h2>
           <p>
@@ -117,40 +152,6 @@
               target="_blank"
               class="btn project-button"
               title="View Weather App"
-              >View project</a
-            >
-          </div>
-        </div>
-        <div class="col d-none d-lg-block">
-          <img
-            src="/images/weather-app.png"
-            alt="Weather app"
-            class="img-fluid rounded-1"
-          />
-        </div>
-      </div>
-      <div class="row mt-5 project-block">
-        <div class="col d-none d-lg-block">
-          <img
-            src="/images/support-your-own.png"
-            alt="Charity organization page"
-            class="img-fluid rounded-1"
-          />
-        </div>
-        <div class="col project-description">
-          <h2>&ldquo;Support our own&rdquo; page</h2>
-          <p>
-            Far far away, behind the word mountains, far from the countries
-            Vokalia and Consonantia, there live the blind texts. Separated they
-            live in Bookmarksgrove right at the coast of the Semantics, a large
-            language ocean. A small river named Duden flows by
-          </p>
-          <div>
-            <a
-              href="https://www.shecodes.io/workshops/shecodes-basics-fcd4e9f1-e58c-456e-8a39-6274d93a7b8b/projects/1166004"
-              target="_blank"
-              class="btn project-button"
-              title="View organization's page"
               >View project</a
             >
           </div>
