--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
       content="Contact Oleksandra Kondieieva - frontend developer, based in North America"
     />
     <title>Contact Oleksandra</title>
+    <link rel="icon" href="/images/bee.svg" type="image/x-icon" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
