--- a/work.html
+++ b/work.html
@@ -9,6 +9,7 @@
       content="Oleksandra's projects. Oleksandra Kondieieva - frontend developer, based in North America"
     />
     <title>Oleksandra's projects</title>
+    <link rel="icon" href="/images/bee.svg" type="image/x-icon" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -65,6 +66,21 @@
         <div class="row">
           <div class="col-md-6 p-4">
             <a
+              href="https://zesty-palmier-463b11.netlify.app/"
+              target="_blank"
+              title="View the dice game"
+            >
+              <img
+                src="/images/dice-game.png"
+                alt="Dice Game"
+                class="img-fluid rounded"
+              />
+            </a>
+            <h3 class="mt-4">Dice Game</h3>
+            <p>HTML, CSS, Bootstrap, JavaScript</p>
+          </div>
+          <div class="col-md-6 p-4">
+            <a
               href="https://grand-haupia-e65aed.netlify.app/"
               target="_blank"
               title="View 'Guess the number' project"
@@ -106,21 +122,6 @@
               />
             </a>
             <h3 class="mt-4">&ldquo;Support our own&rdquo; page</h3>
-            <p>HTML, CSS</p>
-          </div>
-          <div class="col-md-6 p-4">
-            <a
-              href="https://zesty-palmier-463b11.netlify.app/"
-              target="_blank"
-              title="View the dice game"
-            >
-              <img
-                src="/images/dice-game.png"
-                alt="Dice Game"
-                class="img-fluid rounded"
-              />
-            </a>
-            <h3 class="mt-4">Dice Game</h3>
             <p>HTML, CSS</p>
           </div>
         </div>
