--- a/contact.html
+++ b/contact.html
@@ -33,13 +33,13 @@
     <nav class="d-flex justify-content-between fixed-top">
       <a href="/" title="Homepage">
         <img
-          src="/images/logo.png"
+          src="/images/my-logo-1500-cropped.svg"
           class="logo d-none d-md-block"
           alt="Oleksandra's logo"
         />
         <img
-          src="/images/small-logo.jpg"
-          class="logo d-block d-md-none"
+          src="/images/bee-small-logo.svg"
+          class="small-logo d-block d-md-none"
           alt="Oleksandra's logo"
         />
       </a>
