replaced the link of "Support your own" project

--- a/work.html
+++ b/work.html
@@ -111,7 +111,7 @@
           </div>
           <div class="col-md-6 p-4">
             <a
-              href="https://www.shecodes.io/workshops/shecodes-basics-fcd4e9f1-e58c-456e-8a39-6274d93a7b8b/projects/1166004"
+              href="https://gorgeous-melomakarona-79e39c.netlify.app/"
               target="_blank"
               title="View organization's page"
             >
