added the actual information in the description

--- a/about-page.html
+++ b/about-page.html
@@ -64,19 +64,27 @@
           <div class="col">
             <div class="content">
               <h1>Hi! I'm Oleksandra Kondieieva</h1>
-              <h2 class="mt-4">Frontend developer, based in North America</h2>
+              <h2 class="mt-4">Front-end developer from Ukraine</h2>
               <p>
-                For anyone who wants to start learning code, this workshop is
-                very interesting. You will be challenged with different
-                exercises, and everything is well explained, homework and
-                deadlines are good for keep focus
+                I'm a fast-learner, self-motivated and very passionate about
+                what I do.
               </p>
+              <span class="skills">Skills</span>
+              <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Bootstrap</li>
+                <li>JavaScript fundamentals</li>
+                <li>GIT</li>
+                <li>Jira</li>
+              </ul>
+
               <a
                 href="/work.html"
                 class="btn btn-branding mt-4"
                 title="Check Oleksandra's projects"
-                >View my projects</a
-              >
+                >View my projects
+              </a>
             </div>
           </div>
           <div class="col-lg-6">
