--- a/contact.html
+++ b/contact.html
@@ -61,6 +61,11 @@
     <div class="content-container text-center">
       <div class="content">
         <h1>Let's get in touch</h1>
+        <img
+          src="/images/bee-small-logo.svg"
+          alt="Logo"
+          class="contact-image"
+        />
       </div>
     </div>
     <footer>
