--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="hero">
       <h3>👋 Hi! I am</h3>
       <h1>Oleksandra Kondieieva</h1>
-      <p>Frontend developer, based in North America</p>
+      <p>Front-end developer, based in North America</p>
       <div>
         <a
           href="/about-page.html"
@@ -73,7 +73,7 @@
       </div>
     </div>
     <p class="sum-paragraph">
-      Featured Project which my best projects be choice to show
+      Here are some of the projects I've been working on
     </p>
     <div class="container">
       <div class="row mt-5 project-block">
@@ -84,13 +84,13 @@
             class="img-fluid rounded-1"
           />
         </div>
-        <div class="col project-description">
+        <div class="col project-description mt-1">
           <h2>Dice Game</h2>
           <p>
-            Far far away, behind the word mountains, far from the countries
-            Vokalia and Consonantia, there live the blind texts. Separated they
-            live in Bookmarksgrove right at the coast of the Semantics, a large
-            language ocean. A small river named Duden flows by
+            A simple pig (dice) game. Players take turns to roll a single die as
+            many times as they wish, adding all roll results to a running total,
+            but losing their gained score for the turn if they roll a 1. This
+            project is coded by using HTML, CSS, Bootstrap and JavaScript.
           </p>
           <div>
             <a
@@ -103,14 +103,13 @@
           </div>
         </div>
       </div>
-      <div class="row mt-5">
+      <div class="row mt-5 project-block">
         <div class="col project-description">
           <h2>Guess the number</h2>
           <p>
-            Far far away, behind the word mountains, far from the countries
-            Vokalia and Consonantia, there live the blind texts. Separated they
-            live in Bookmarksgrove right at the coast of the Semantics, a large
-            language ocean. A small river named Duden flows by
+            Number guessing game. The goal is find out the computed random
+            number to solve in the fewest guesses. This project is coded by
+            using HTML, CSS, Bootstrap and JavaScript.
           </p>
           <div>
             <a
@@ -141,10 +140,15 @@
         <div class="col project-description">
           <h2>Weather App</h2>
           <p>
-            Far far away, behind the word mountains, far from the countries
-            Vokalia and Consonantia, there live the blind texts. Separated they
-            live in Bookmarksgrove right at the coast of the Semantics, a large
-            language ocean. A small river named Duden flows by
+            This is a weather app based on
+            <a
+              href="https://openweathermap.org/api"
+              title="Link to the API"
+              class="text-decoration-none"
+              >Weather API</a
+            >
+            with the current weather and predicition for the next 5 days. This
+            project is coded by using HTML, CSS and JavaScript.
           </p>
           <div>
             <a
