--- a/work.html
+++ b/work.html
@@ -64,7 +64,7 @@
           <h1>Take a look at what I've been working on!</h1>
         </div>
         <div class="row">
-          <div class="col-md-6 p-4">
+          <div class="col-md-6 img-section">
             <a
               href="https://zesty-palmier-463b11.netlify.app/"
               target="_blank"
@@ -75,11 +75,11 @@
                 alt="Dice Game"
                 class="img-fluid rounded"
               />
+              <h3 class="mt-4">Dice Game</h3>
+              <p>HTML, CSS, Bootstrap, JavaScript</p>
             </a>
-            <h3 class="mt-4">Dice Game</h3>
-            <p>HTML, CSS, Bootstrap, JavaScript</p>
           </div>
-          <div class="col-md-6 p-4">
+          <div class="col-md-6 img-section">
             <a
               href="https://grand-haupia-e65aed.netlify.app/"
               target="_blank"
@@ -90,11 +90,11 @@
                 alt="Guess the number"
                 class="img-fluid rounded"
               />
+              <h3 class="mt-4">Guess the number</h3>
+              <p>HTML, CSS, Bootstrap, JavaScript</p>
             </a>
-            <h3 class="mt-4">Guess the number</h3>
-            <p>HTML, CSS, JavaScript</p>
           </div>
-          <div class="col-md-6 p-4">
+          <div class="col-md-6 img-section">
             <a
               href="https://imaginative-jelly-0061e5.netlify.app/"
               target="_blank"
@@ -105,11 +105,11 @@
                 alt="Weather App"
                 class="img-fluid rounded"
               />
+              <h3 class="mt-4">Weather App</h3>
+              <p>HTML, CSS, JavaScript</p>
             </a>
-            <h3 class="mt-4">Weather App</h3>
-            <p>HTML, CSS, JavaScript</p>
           </div>
-          <div class="col-md-6 p-4">
+          <div class="col-md-6 img-section">
             <a
               href="https://gorgeous-melomakarona-79e39c.netlify.app/"
               target="_blank"
@@ -120,9 +120,9 @@
                 alt="Charity organization page"
                 class="img-fluid rounded"
               />
+              <h3 class="mt-4">&ldquo;Support our own&rdquo; page</h3>
+              <p>HTML, CSS</p>
             </a>
-            <h3 class="mt-4">&ldquo;Support our own&rdquo; page</h3>
-            <p>HTML, CSS</p>
           </div>
         </div>
       </div>
